# hm_predict

./: CMakeLists.txt  DockerFile  README.MD  action.yaml
.github/workflows/: predict.yaml
include/: classifier.h  tensor.h  tf_classifier.h
src/:  tf_classifier.cpp  main.cpp  tensor.cpp
